added create ops notebook

--- a/ImgLib2 Demo.ipynb
+++ b/ImgLib2 Demo.ipynb
@@ -71,9 +71,7 @@
    ],
    "source": [
     "load.resolver(\"imagej.public\" at \"http://maven.imagej.net/content/groups/public\")\n",
-    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // since % since %% adds scala version\n",
-    "//load.ivy(\"net.imglib2\" % \"imglib2\" % \"2.5.0\")\n",
-    "//load.ivy(\"net.imglib2\" % \"imglib2-algorithm\" % \"0.3.3\")"
+    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // use % since %% adds scala version"
    ]
   },
   {
@@ -87,7 +85,7 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36mnet.imagej.ImageJ\u001b[0m\n",
-       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@1e16dd41"
+       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@3a03ad97"
       ]
      },
      "metadata": {},
