adding javascript so the equation and other environments work. trying to fix the issues with the class compiling in the REPL in Scala Jupyter

--- a/Create Ops.ipynb
+++ b/Create Ops.ipynb
@@ -51,6 +51,38 @@
       "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
       "\n",
       "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
+      "\n",
+      ":: problems summary ::\n",
+      ":::: WARNINGS\n",
+      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from sonatype-snapshots, using Sun Oct 25 20:00:40 CET 2015\n",
+      "\n",
+      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from imagej.public, using Sun Oct 25 20:00:40 CET 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
+      "\n",
+      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT\n",
+      "\n",
+      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 11:44:30 CEST 2015\n",
+      "\n",
+      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from imagej.public, using Wed Oct 21 11:44:30 CEST 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
+      "\n",
+      "\tChoosing imagej.public for com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT\n",
+      "\n",
+      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 17:05:05 CEST 2015\n",
+      "\n",
+      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from imagej.public, using Wed Oct 21 17:05:05 CEST 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
+      "\n",
+      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
+      "\n",
+      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
       "\n"
      ]
     },
@@ -64,7 +96,8 @@
    ],
    "source": [
     "load.resolver(\"imagej.public\" at \"http://maven.imagej.net/content/groups/public\")\n",
-    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // use % since %% adds scala version"
+    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // use % since %% adds scala version\n",
+    "load.ivy(\"de.christophkraemer\" % \"rhino-script-engine\" % \"1.1.0\")  // since it's not in the classpath with notebooks per default"
    ]
   },
   {
@@ -111,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "defined \u001b[32mclass \u001b[36mRamp\u001b[0m"
+       "defined \u001b[32mobject \u001b[36mMyOps\u001b[0m"
       ]
      },
      "metadata": {},
@@ -127,8 +160,10 @@
     }
    ],
    "source": [
-    "@Plugin(`type` = classOf[Op], name = \"ramp\")\n",
-    "class Ramp[T <: RealType[T]] extends AbstractOp {\n",
+    "object MyOps {\n",
+    "    @Plugin(`type` = classOf[Op], name = \"ramp2\")\n",
+    "class Ramp extends AbstractOp {\n",
+    "    \n",
     "    @Parameter(`type` = ItemIO.OUTPUT)\n",
     "\tprivate var rampImg: ArrayImg[DoubleType, DoubleArray] = null\n",
     "    \n",
@@ -151,7 +186,9 @@
     "\t}\n",
     "    /** make it accessible from outside **/\n",
     "    def getOutput() = rampImg\n",
-    "}"
+    "}\n",
+    "}\n",
+    "//import MyOps._\n"
    ]
   },
   {
@@ -165,7 +202,7 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36mnet.imagej.ImageJ\u001b[0m\n",
-       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@2f4ebffe"
+       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@6b8fe947"
       ]
      },
      "metadata": {},
@@ -179,36 +216,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "java.lang.IllegalArgumentException: No candidate 'ramp' ops",
-      "\tnet.imagej.ops.DefaultOpMatchingService.findModule(DefaultOpMatchingService.java:86)",
-      "\tnet.imagej.ops.OpEnvironment.module(OpEnvironment.java:226)",
-      "\tnet.imagej.ops.OpEnvironment.run(OpEnvironment.java:126)",
-      "\tcmd4$$user$$anonfun$3.apply(Main.scala:76)"
-     ]
+     "data": {
+      "text/plain": [
+       "\u001b[32mimport \u001b[36mMyOps._\u001b[0m\n",
+       "\u001b[32mimport \u001b[36morg.scijava.plugin.PluginInfo\u001b[0m\n",
+       "\u001b[36mrampInfo\u001b[0m: org.scijava.plugin.PluginInfo[net.imagej.ops.Op] = name='ramp2', priority=0.0, enabled=true, pluginType=Op"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "// Run our op\n",
-    "val rampImage = ij.op().run(\"ramp\");\n",
-    "\n",
-    "// And display the result!\n",
-    "ij.ui().showUI();\n",
-    "ij.ui().show(rampImage);"
+    "import MyOps._\n",
+    "import org.scijava.plugin.PluginInfo\n",
+    "val rampInfo = new PluginInfo(classOf[Ramp],\n",
+    "                              classOf[Op]\n",
+    "                             )\n",
+    "ij.plugin().addPlugin(rampInfo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -217,37 +262,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ERROR] Cannot create plugin: class='org.scijava.plugins.scripting.javascript.JavaScriptScriptLanguage', name='JavaScript', priority=0.0, enabled=true, pluginType=ScriptLanguage\n",
-      "java.lang.IllegalArgumentException: No such script engine: javascript\n",
-      "\tat org.scijava.script.AdaptedScriptLanguage.findFactory(AdaptedScriptLanguage.java:151)\n",
-      "\tat org.scijava.script.AdaptedScriptLanguage.<init>(AdaptedScriptLanguage.java:73)\n",
-      "\tat org.scijava.plugins.scripting.javascript.JavaScriptScriptLanguage.<init>(JavaScriptScriptLanguage.java:59)\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
-      "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
-      "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:422)\n",
-      "\tat java.lang.Class.newInstance(Class.java:442)\n",
-      "\tat org.scijava.plugin.PluginInfo.createInstance(PluginInfo.java:302)\n",
-      "\tat org.scijava.plugin.DefaultPluginService.createInstance(DefaultPluginService.java:236)\n",
-      "\tat org.scijava.plugin.DefaultPluginService.createInstances(DefaultPluginService.java:225)\n",
-      "\tat org.scijava.plugin.DefaultPluginService.createInstancesOfType(DefaultPluginService.java:216)\n",
-      "\tat org.scijava.plugin.AbstractSingletonService.initInstances(AbstractSingletonService.java:123)\n",
-      "\tat org.scijava.plugin.AbstractSingletonService.getInstances(AbstractSingletonService.java:72)\n",
-      "\tat org.scijava.plugin.AbstractSingletonService$1.get(AbstractSingletonService.java:101)\n",
-      "\tat org.scijava.plugin.AbstractSingletonService$1.get(AbstractSingletonService.java:97)\n",
-      "\tat org.scijava.object.ObjectIndex.resolvePending(ObjectIndex.java:387)\n",
-      "\tat org.scijava.object.ObjectIndex.get(ObjectIndex.java:132)\n",
-      "\tat org.scijava.object.DefaultObjectService.getObjects(DefaultObjectService.java:86)\n",
-      "\tat org.scijava.display.DefaultDisplayService.getDisplays(DefaultDisplayService.java:165)\n",
-      "\tat org.scijava.ui.DefaultUIService.showUI(DefaultUIService.java:182)\n",
-      "\tat org.scijava.ui.DefaultUIService.showUI(DefaultUIService.java:165)\n",
-      "\tat cmd7$$user$$anonfun$1.apply$mcV$sp(Main.scala:86)\n",
-      "\tat cmd7$$user.<init>(Main.scala:87)\n",
-      "\tat cmd7.<init>(Main.scala:94)\n",
-      "\tat cmd7$.<init>(Main.scala:55)\n",
-      "\tat cmd7$.<clinit>(Main.scala)\n",
-      "\tat cmd7$Main$.$main(Main.scala:50)\n",
-      "\tat cmd7$Main.$main(Main.scala)\n",
+      "[ERROR] Cannot create module: cmd2$$user$MyOps$Ramp\n",
+      "org.scijava.module.ModuleException: org.scijava.InstantiableException: java.lang.InstantiationException: cmd2$$user$MyOps$Ramp\n",
+      "\tat org.scijava.command.CommandModule.instantiateCommand(CommandModule.java:250)\n",
+      "\tat org.scijava.command.CommandModule.<init>(CommandModule.java:96)\n",
+      "\tat org.scijava.command.CommandInfo.createModule(CommandInfo.java:330)\n",
+      "\tat org.scijava.module.DefaultModuleService.createModule(DefaultModuleService.java:156)\n",
+      "\tat net.imagej.ops.DefaultOpMatchingService.createModule(DefaultOpMatchingService.java:341)\n",
+      "\tat net.imagej.ops.DefaultOpMatchingService.match(DefaultOpMatchingService.java:288)\n",
+      "\tat net.imagej.ops.DefaultOpMatchingService.match(DefaultOpMatchingService.java:155)\n",
+      "\tat net.imagej.ops.DefaultOpMatchingService.findMatches(DefaultOpMatchingService.java:142)\n",
+      "\tat net.imagej.ops.DefaultOpMatchingService.findModule(DefaultOpMatchingService.java:91)\n",
+      "\tat net.imagej.ops.OpEnvironment.module(OpEnvironment.java:226)\n",
+      "\tat net.imagej.ops.OpEnvironment.run(OpEnvironment.java:126)\n",
+      "\tat cmd5$$user$$anonfun$3.apply(Main.scala:84)\n",
+      "\tat cmd5$$user.<init>(Main.scala:85)\n",
+      "\tat cmd5.<init>(Main.scala:95)\n",
+      "\tat cmd5$.<init>(Main.scala:63)\n",
+      "\tat cmd5$.<clinit>(Main.scala)\n",
+      "\tat cmd5$Main$.$main(Main.scala:58)\n",
+      "\tat cmd5$Main.$main(Main.scala)\n",
       "\tat sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
       "\tat sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
       "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
@@ -303,17 +337,65 @@
       "\tat java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
       "\tat java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)\n",
       "\tat java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)\n",
-      "\tat java.lang.Thread.run(Thread.java:745)\n"
+      "\tat java.lang.Thread.run(Thread.java:745)\n",
+      "Caused by: org.scijava.InstantiableException: java.lang.InstantiationException: cmd2$$user$MyOps$Ramp\n",
+      "\tat org.scijava.plugin.PluginInfo.createInstance(PluginInfo.java:307)\n",
+      "\tat org.scijava.command.CommandInfo.createInstance(CommandInfo.java:250)\n",
+      "\tat org.scijava.command.CommandModule.instantiateCommand(CommandModule.java:247)\n",
+      "\t... 73 more\n",
+      "Caused by: java.lang.InstantiationException: cmd2$$user$MyOps$Ramp\n",
+      "\tat java.lang.Class.newInstance(Class.java:427)\n",
+      "\tat org.scijava.plugin.PluginInfo.createInstance(PluginInfo.java:302)\n",
+      "\t... 75 more\n",
+      "Caused by: java.lang.NoSuchMethodException: cmd2$$user$MyOps$Ramp.<init>()\n",
+      "\tat java.lang.Class.getConstructor0(Class.java:3082)\n",
+      "\tat java.lang.Class.newInstance(Class.java:412)\n",
+      "\t... 76 more\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "\u001b[36mhackedRampImage\u001b[0m: net.imglib2.img.array.ArrayImg[net.imglib2.type.numeric.real.DoubleType,net.imglib2.img.basictypeaccess.array.DoubleArray] = ArrayImg [256x256]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "java.lang.NullPointerException",
+      "\tnet.imagej.ops.DefaultOpMatchingService.createModule(DefaultOpMatchingService.java:347)",
+      "\tnet.imagej.ops.DefaultOpMatchingService.match(DefaultOpMatchingService.java:288)",
+      "\tnet.imagej.ops.DefaultOpMatchingService.match(DefaultOpMatchingService.java:155)",
+      "\tnet.imagej.ops.DefaultOpMatchingService.findMatches(DefaultOpMatchingService.java:142)",
+      "\tnet.imagej.ops.DefaultOpMatchingService.findModule(DefaultOpMatchingService.java:91)",
+      "\tnet.imagej.ops.OpEnvironment.module(OpEnvironment.java:226)",
+      "\tnet.imagej.ops.OpEnvironment.run(OpEnvironment.java:126)",
+      "\tcmd5$$user$$anonfun$3.apply(Main.scala:84)"
+     ]
+    }
+   ],
+   "source": [
+    "val rampImage = ij.op().run(\"ramp2\");\n",
+    "\n",
+    "// And display the result!\n",
+    "ij.ui().showUI();\n",
+    "ij.ui().show(rampImage);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Compilation Failed",
+      "\u001b[31mMain.scala:88: cmd6.this.$ref$cmd2.MyOps.Ramp does not take type parameters",
+      "    val t_op = new Ramp[DoubleType]()",
+      "                   ^\u001b[0m"
+     ]
     }
    ],
    "source": [
@@ -324,7 +406,147 @@
     "    t_op.getOutput()\n",
     "}\n",
     "ij.ui().showUI();\n",
-    "ij.ui().show();"
+    "ij.ui().show(hackedRampImage);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "java.lang.InstantiationException: cmd2$$user$MyOps$Ramp",
+      "\tjava.lang.Class.newInstance(Class.java:427)",
+      "\tcmd7$$user$$anonfun$3.apply(Main.scala:92)",
+      "\tcmd7$$user$$anonfun$3.apply(Main.scala:90)",
+      "java.lang.NoSuchMethodException: cmd2$$user$MyOps$Ramp.<init>()",
+      "\tjava.lang.Class.getConstructor0(Class.java:3082)",
+      "\tjava.lang.Class.newInstance(Class.java:412)",
+      "\tcmd7$$user$$anonfun$3.apply(Main.scala:92)",
+      "\tcmd7$$user$$anonfun$3.apply(Main.scala:90)"
+     ]
+    }
+   ],
+   "source": [
+    "// Hack the Op\n",
+    "val hackedRefRampImage = {\n",
+    "    val t_op = classOf[MyOps.Ramp].newInstance()\n",
+    "    t_op.run()\n",
+    "    t_op.getOutput()\n",
+    "}\n",
+    "ij.ui().showUI();\n",
+    "ij.ui().show(hackedRefRampImage);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Constructor Issue\n",
+    "The constructor shows up with an argument via reflection (even though it has no real args). This needs to be fixed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mmyConst\u001b[0m: scala.Array[java.lang.reflect.Constructor[_]] = \u001b[33mArray\u001b[0m(public cmd2$$user$MyOps$Ramp(cmd2$$user$MyOps$))\n",
+       "\u001b[36mres6_1\u001b[0m: scala.Array[java.lang.reflect.Constructor[_]] = \u001b[33mArray\u001b[0m(public net.imagej.ImageJ(), public net.imagej.ImageJ(org.scijava.Context))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "val myConst = classOf[MyOps.Ramp].getConstructors()\n",
+    "classOf[ImageJ].getConstructors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "java.lang.InstantiationException: cmd2$$user$MyOps$Ramp",
+      "\tjava.lang.Class.newInstance(Class.java:427)",
+      "\tcmd8$$user$$anonfun$1.apply(Main.scala:89)",
+      "\tcmd8$$user$$anonfun$1.apply(Main.scala:88)",
+      "java.lang.NoSuchMethodException: cmd2$$user$MyOps$Ramp.<init>()",
+      "\tjava.lang.Class.getConstructor0(Class.java:3082)",
+      "\tjava.lang.Class.newInstance(Class.java:412)",
+      "\tcmd8$$user$$anonfun$1.apply(Main.scala:89)",
+      "\tcmd8$$user$$anonfun$1.apply(Main.scala:88)"
+     ]
+    }
+   ],
+   "source": [
+    "classOf[MyOps.Ramp].newInstance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Compilation Failed",
+      "\u001b[31mMain.scala:89: too many arguments for method newInstance: ()cmd9.this.$ref$cmd2.MyOps.Ramp",
+      "classOf[MyOps.Ramp].newInstance(null)",
+      "                               ^\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "classOf[MyOps.Ramp].newInstance(null)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Compilation Failed",
+      "\u001b[31mMain.scala:89: too many arguments for method newInstance: ()cmd9.this.$ref$cmd2.MyOps.Ramp",
+      "classOf[MyOps.Ramp].newInstance(Array[Object](null))",
+      "                               ^\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "classOf[MyOps.Ramp].newInstance(Array[Object](null))"
    ]
   },
   {
