exploring new display / dataview types

--- a/Create Ops.ipynb
+++ b/Create Ops.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -376,7 +376,11 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36mnet.imglib2.RandomAccessibleInterval\u001b[0m\n",
-       "\u001b[36mtypeRamp\u001b[0m: net.imglib2.RandomAccessibleInterval[net.imglib2.type.numeric.real.DoubleType] = ArrayImg [256x256]"
+       "\u001b[36mtypeRamp\u001b[0m: net.imglib2.img.Img[net.imglib2.type.numeric.real.DoubleType] = ArrayImg [256x256]\n",
+       "\u001b[36mdsRamp\u001b[0m: net.imagej.DefaultDataset = Untitled\n",
+       "\u001b[36mdv\u001b[0m: net.imagej.display.DataView = net.imagej.display.DefaultDatasetView@6bc89516\n",
+       "\u001b[36mdisp\u001b[0m: org.scijava.display.Display[?0] = plugin:class net.imagej.display.DefaultImageDisplay: type=interface net.imagej.display.DataView, name=Untitled-1, objects={net.imagej.display.DefaultDatasetView@6bc89516}\n",
+       "\u001b[36mres33_5\u001b[0m: java.util.List[?0] = [net.imagej.display.DefaultDatasetView@3294c9e8, net.imagej.display.DefaultOverlayView@16e2b43a]"
       ]
      },
      "metadata": {},
@@ -385,58 +389,15 @@
    ],
    "source": [
     "import net.imglib2.RandomAccessibleInterval\n",
-    "val typeRamp = rampImage.asInstanceOf[net.imglib2.img.Img[DoubleType]].asInstanceOf[RandomAccessibleInterval[DoubleType]]\n",
-    "\n"
+    "val typeRamp = rampImage.asInstanceOf[net.imglib2.img.Img[DoubleType]]\n",
+    "val dsRamp = new net.imagej.DefaultDataset(ij.getContext(),net.imagej.ImgPlus.wrap(typeRamp))\n",
+    "//val dsView = new net.imagej.display.DefaultDatasetView()\n",
+    "//dsView.\n",
+    "val dv = ij.imageDisplay().createDataView(dsRamp);\n",
+    "val disp = ij.display().createDisplay(dv)\n",
+    "import net.imglib2.img.display.imagej.ImageJFunctions;\n",
+    "ImageJFunctions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[32mimport \u001b[36mnet.imglib2.converter.Converter\u001b[0m\n",
-       "\u001b[32mimport \u001b[36mnet.imglib2.converter.Converters\u001b[0m\n",
-       "\u001b[32mimport \u001b[36mnet.imglib2.`type`.numeric.integer.UnsignedByteType\u001b[0m\n",
-       "\u001b[32mimport \u001b[36mnet.imglib2.converter.RealUnsignedByteConverter\u001b[0m\n",
-       "\u001b[36mc\u001b[0m: net.imglib2.converter.RealUnsignedByteConverter[net.imglib2.type.numeric.real.DoubleType] = net.imglib2.converter.RealUnsignedByteConverter@1b83de35"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import net.imglib2.converter.Converter\n",
-    "import net.imglib2.converter.Converters\n",
-    "import net.imglib2.`type`.numeric.integer.UnsignedByteType;\n",
-    "import net.imglib2.converter.RealUnsignedByteConverter\n",
-    "val c = new RealUnsignedByteConverter[DoubleType]()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\u001b[36mfixie\u001b[0m: net.imglib2.type.numeric.integer.UnsignedByteType = 230\n",
-       "\u001b[36mres29_2\u001b[0m: net.imglib2.type.numeric.integer.UnsignedByteType = 230"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -484,7 +445,7 @@
     "\t\t\t\t},\n",
     "\t\t\t\tnew FloatType() );\n",
     "\n",
-    "val dsRamp = new net.imagej.DefaultDataset(ij.getContext(),net.imagej.ImgPlus.wrap(typeRamp))\n",
+    "\n",
     "dsRamp.preview()"
    ]
   },
