fixing create ops and tweaking zoom

--- a/Zoom-Interpolate.ipynb
+++ b/Zoom-Interpolate.ipynb
@@ -273,13 +273,6 @@
     "        imgFIS.read(out)\n",
     "        display.jpg(out)\n",
     "    }\n",
-    "}\n",
-    "import net.imglib2.`type`.numeric.RealType\n",
-    "implicit class dsImgPlus[T <: RealType[T], U <: net.imglib2.img.Img[T]](curImg: U)(implicit ij: net.imagej.ImageJ) {\n",
-    "    def toDataset() = {\n",
-    "        new net.imagej.DefaultDataset(ij.getContext(),net.imagej.ImgPlus.wrap(curImg))\n",
-    "    }\n",
-    "    def preview(): Unit = toDataset().preview()\n",
     "}"
    ]
   },
@@ -439,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -448,15 +441,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] Populating metadata\n"
+      "[INFO] Reading IFDs\n",
+      "[INFO] Populating metadata\n",
+      "[INFO] Checking comment style\n",
+      "[WARNING] Expected positive value for PhysicalSizeX; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeY; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeX; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeY; got 0.0\n",
+      "[INFO] Reading IFDs\n",
+      "[INFO] Populating metadata\n",
+      "[INFO] Checking comment style\n",
+      "[WARNING] Expected positive value for PhysicalSizeX; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeY; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeX; got 0.0\n",
+      "[WARNING] Expected positive value for PhysicalSizeY; got 0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\u001b[36minputImg\u001b[0m: java.lang.String = \u001b[32m\"sample-data/starstack.jpg\"\u001b[0m\n",
+       "\u001b[32mimport \u001b[36mnet.imglib2.`type`.numeric.integer.UnsignedByteType\u001b[0m\n",
+       "\u001b[36minputImg\u001b[0m: java.lang.String = \u001b[32m\"sample-data/starstack.tif\"\u001b[0m\n",
        "\u001b[36mcOpener\u001b[0m: org.scijava.io.IOPlugin[?0] = plugin:class io.scif.io.DatasetIOPlugin\n",
-       "\u001b[36mres9_2\u001b[0m: Any = starstack.jpg"
+       "\u001b[36minImg\u001b[0m: Any = starstack.tif\n",
+       "\u001b[36mtypedImage\u001b[0m: net.imagej.ImgPlus[net.imglib2.type.numeric.integer.UnsignedByteType] = io.scif.img.SCIFIOImgPlus@46f07697"
       ]
      },
      "metadata": {},
@@ -465,15 +473,17 @@
    ],
    "source": [
     "// open with ImgOpener using an ArrayImgFactory\n",
-    "val inputImg = \"sample-data/starstack.jpg\"\n",
+    "import net.imglib2.`type`.numeric.integer.UnsignedByteType\n",
+    "val inputImg = \"sample-data/starstack.tif\"\n",
     "val cOpener = ij.io().getOpener(inputImg)\n",
-    "cOpener.open(inputImg)\n",
-    "//val img = cOpener.openImg(\"sample-data/starstack.jpg\",new FloatType() )\n"
+    "val inImg = cOpener.open(inputImg)\n",
+    "//val img = cOpener.openImg(\"sample-data/starstack.jpg\",new FloatType() )\n",
+    "val typedImage = ij.scifio().datasetIO().open(inputImg).typedImg(new UnsignedByteType())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -484,14 +494,17 @@
      "output_type": "error",
      "traceback": [
       "Compilation Failed",
-      "\u001b[31mMain.scala:97: not found: value img",
-      "new net.imagej.DefaultDataset(ij.getContext(),img)",
-      "                                              ^\u001b[0m"
+      "\u001b[31mMain.scala:107: overloaded method value create with alternatives:",
+      "  [T <: net.imglib2.type.numeric.RealType[T]](x$1: net.imglib2.RandomAccessibleInterval[T])net.imagej.Dataset <and>",
+      "  [T <: net.imglib2.type.numeric.RealType[T]](x$1: net.imagej.ImgPlus[T])net.imagej.Dataset",
+      " cannot be applied to (String)",
+      "ij.dataset().create(inputImg).preview()",
+      "             ^\u001b[0m"
      ]
     }
    ],
    "source": [
-    "new net.imagej.DefaultDataset(ij.getContext(),img)"
+    "ij.dataset().create(inputImg).preview()"
    ]
   },
   {
