fixed creating ops, added reference to imglib2 tutorials

--- a/Zoom-Interpolate.ipynb
+++ b/Zoom-Interpolate.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zoom / Interpolation Tutorials\n",
+    "This example is taken from the \n",
+    "[Exercise 7 in the ImgLib2 tutorials](https://github.com/imglib/imglib2-tutorials/blob/master/src/main/java/Example7.java)\n",
+    "A few changes have been made like from ```FloatType``` to ```UnsignedByteType``` so the image can be displayed more easily                                      \n",
+    "                                                                     "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
