--- a/Create Ops.ipynb
+++ b/Create Ops.ipynb
@@ -13,77 +13,53 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":: problems summary ::\n",
-      ":::: WARNINGS\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from sonatype-snapshots, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from imagej.public, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from imagej.public, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from imagej.public, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
-      "\n",
-      ":: problems summary ::\n",
-      ":::: WARNINGS\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from sonatype-snapshots, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from imagej.public, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from imagej.public, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from imagej.public, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
+      "22 new artifact(s)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22 new artifacts in macro"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "22 new artifacts in runtime\n",
+      "22 new artifacts in compile\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 new artifact(s)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2 new artifacts in macro\n",
+      "2 new artifacts in runtime\n",
+      "2 new artifacts in compile\n"
      ]
     },
     {
@@ -95,9 +71,9 @@
     }
    ],
    "source": [
-    "load.resolver(\"imagej.public\" at \"http://maven.imagej.net/content/groups/public\")\n",
-    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // use % since %% adds scala version\n",
-    "load.ivy(\"de.christophkraemer\" % \"rhino-script-engine\" % \"1.1.0\")  // since it's not in the classpath with notebooks per default"
+    "classpath.addRepository(\"http://maven.imagej.net/content/groups/public\")\n",
+    "classpath.add(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-50\") // use % since %% adds scala version\n",
+    "classpath.add(\"de.christophkraemer\" % \"rhino-script-engine\" % \"1.1.0\")  // since it's not in the classpath with notebooks per default"
    ]
   },
   {
@@ -201,7 +177,7 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36mnet.imagej.ImageJ\u001b[0m\n",
-       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@136f99a7"
+       "\u001b[36mij\u001b[0m: \u001b[32mnet\u001b[0m.\u001b[32mimagej\u001b[0m.\u001b[32mImageJ\u001b[0m = net.imagej.ImageJ@644cad7e"
       ]
      },
      "metadata": {},
@@ -224,7 +200,7 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36morg.scijava.plugin.PluginInfo\u001b[0m\n",
-       "\u001b[36mrampInfo\u001b[0m: org.scijava.plugin.PluginInfo[net.imagej.ops.Op] = name='ramp', priority=0.0, enabled=true, pluginType=Op"
+       "\u001b[36mrampInfo\u001b[0m: \u001b[32morg\u001b[0m.\u001b[32mscijava\u001b[0m.\u001b[32mplugin\u001b[0m.\u001b[32mPluginInfo\u001b[0m[\u001b[32mOp\u001b[0m] = name='ramp', priority=0.0, enabled=true, pluginType=Op"
       ]
      },
      "metadata": {},
@@ -250,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[36mrampImage\u001b[0m: java.lang.Object = ArrayImg [256x256]"
+       "\u001b[36mrampImage\u001b[0m: \u001b[32mObject\u001b[0m = ArrayImg [256x256]"
       ]
      },
      "metadata": {},
@@ -397,7 +373,7 @@
       "text/plain": [
        "defined \u001b[32mclass \u001b[36mDoubleRamp\u001b[0m\n",
        "\u001b[32mimport \u001b[36morg.scijava.plugin.PluginInfo\u001b[0m\n",
-       "\u001b[36mrampInfo\u001b[0m: org.scijava.plugin.PluginInfo[net.imagej.ops.Op] = name='dblramp', priority=0.0, enabled=true, pluginType=Op"
+       "\u001b[36mrampInfo\u001b[0m: \u001b[32mPluginInfo\u001b[0m[\u001b[32mOp\u001b[0m] = name='dblramp', priority=0.0, enabled=true, pluginType=Op"
       ]
      },
      "metadata": {},
@@ -449,7 +425,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[36mdblRampImage\u001b[0m: java.lang.Object = ArrayImg [256x256]"
+       "\u001b[36mdblRampImage\u001b[0m: \u001b[32mObject\u001b[0m = ArrayImg [256x256]"
       ]
      },
      "metadata": {},
@@ -463,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -472,8 +448,7 @@
      "data": {
       "text/plain": [
        "\u001b[32mimport \u001b[36mnet.imglib2.RandomAccessibleInterval\u001b[0m\n",
-       "\u001b[36mtypeRamp\u001b[0m: net.imglib2.img.Img[net.imglib2.type.numeric.real.DoubleType] = ArrayImg [256x256]\n",
-       "\u001b[36mdsRamp\u001b[0m: net.imagej.DefaultDataset = Untitled"
+       "\u001b[36mtypeRamp\u001b[0m: \u001b[32mImg\u001b[0m[\u001b[32mDoubleType\u001b[0m] = ArrayImg [256x256]"
       ]
      },
      "metadata": {},
@@ -483,12 +458,12 @@
    "source": [
     "import net.imglib2.RandomAccessibleInterval\n",
     "val typeRamp = rampImage.asInstanceOf[net.imglib2.img.Img[DoubleType]]\n",
-    "val dsRamp = new net.imagej.DefaultDataset(ij.getContext(),net.imagej.ImgPlus.wrap(typeRamp))\n"
+    "//val dsRamp = new net.imagej.DefaultDataset(ij.getContext(),net.imagej.ImgPlus.wrap(typeRamp))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -503,9 +478,8 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[32mimport \u001b[36mnet.imglib2.img.display.imagej.ImageJFunctions\u001b[0m\n",
-       "\u001b[36mnormImg\u001b[0m: net.imglib2.img.Img[net.imglib2.type.numeric.real.DoubleType] = ArrayImg [256x256]\n",
-       "\u001b[36mres12_2\u001b[0m: net.imglib2.IterableInterval[net.imglib2.type.numeric.real.DoubleType] = ArrayImg [256x256]"
+       "\u001b[36mnormImg\u001b[0m: \u001b[32mImg\u001b[0m[\u001b[32mDoubleType\u001b[0m] = ArrayImg [256x256]\n",
+       "\u001b[36mres13_1\u001b[0m: \u001b[32mnet\u001b[0m.\u001b[32mimglib2\u001b[0m.\u001b[32mIterableInterval\u001b[0m[\u001b[32mDoubleType\u001b[0m] = ArrayImg [256x256]"
       ]
      },
      "metadata": {},
@@ -513,45 +487,25 @@
     }
    ],
    "source": [
-    "import net.imglib2.img.display.imagej.ImageJFunctions;\n",
     "val normImg = typeRamp.copy()\n",
     "ij.op().image().normalize(typeRamp,normImg)\n",
-    "val simpImg = ImageJFunctions.show(normImg).getBufferedImage().preview()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "ImageJFunctions.show(normImg).show()"
+    "ij.dataset().create(normImg).preview()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala 2.10",
-   "language": "scala210",
-   "name": "scala210"
+   "display_name": "Scala 2.11",
+   "language": "scala211",
+   "name": "scala211"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": "scala",
+   "file_extension": ".scala",
    "mimetype": "text/x-scala",
-   "name": "scala210",
+   "name": "scala211",
    "pygments_lexer": "scala",
-   "version": "2.10.5"
+   "version": "2.11.8"
   }
  },
  "nbformat": 4,
