--- a/Reading Image Demo.ipynb
+++ b/Reading Image Demo.ipynb
@@ -19,70 +19,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":: problems summary ::\n",
-      ":::: WARNINGS\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from sonatype-snapshots, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from imagej.public, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from imagej.public, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from imagej.public, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
-      "\n",
-      ":: problems summary ::\n",
-      ":::: WARNINGS\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from sonatype-snapshots, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT from imagej.public, using Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT, using Sun Oct 25 20:00:40 CET 2015 and Sun Oct 25 20:00:40 CET 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-scala-api_2.10.5;0.2.0-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT from imagej.public, using Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT, using Wed Oct 21 11:44:30 CEST 2015 and Wed Oct 21 11:44:30 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault#ammonite-api_2.10.5;0.3.1-SNAPSHOT\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from sonatype-snapshots, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tUnable to reparse com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT from imagej.public, using Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tSorting results from com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT, using Wed Oct 21 17:05:05 CEST 2015 and Wed Oct 21 17:05:05 CEST 2015\n",
-      "\n",
-      "\tChoosing imagej.public for com.github.alexarchambault.jupyter#jupyter-api_2.10;0.2.0-SNAPSHOT\n",
+      "22 new artifact(s)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22 new artifacts in macro"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "22 new artifacts in runtime\n",
+      "22 new artifacts in compile\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 new artifact(s)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2 new artifacts in macro"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2 new artifacts in runtime\n",
+      "2 new artifacts in compile\n"
      ]
     },
     {
@@ -94,14 +84,14 @@
     }
    ],
    "source": [
-    "load.resolver(\"imagej.public\" at \"http://maven.imagej.net/content/groups/public\")\n",
-    "load.ivy(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-44\") // use % since %% adds scala version\n",
-    "load.ivy(\"de.christophkraemer\" % \"rhino-script-engine\" % \"1.1.0\")  // since it's not in the classpath with notebooks per default"
+    "classpath.addRepository(\"http://maven.imagej.net/content/groups/public\")\n",
+    "classpath.add(\"net.imagej\" % \"imagej\" % \"2.0.0-rc-50\") // use % since %% adds scala version\n",
+    "classpath.add(\"de.christophkraemer\" % \"rhino-script-engine\" % \"1.1.0\")  // since it's not in the classpath with notebooks per default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[36mij\u001b[0m: net.imagej.ImageJ = net.imagej.ImageJ@5b15a518"
+       "\u001b[36mij\u001b[0m: \u001b[32mnet\u001b[0m.\u001b[32mimagej\u001b[0m.\u001b[32mImageJ\u001b[0m = net.imagej.ImageJ@15dcce44"
       ]
      },
      "metadata": {},
@@ -172,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[36mdataset\u001b[0m: net.imagej.Dataset = Ocean.png"
+       "\u001b[36mdataset\u001b[0m: \u001b[32mnet\u001b[0m.\u001b[32mimagej\u001b[0m.\u001b[32mDataset\u001b[0m = Ocean.png"
       ]
      },
      "metadata": {},
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -217,11 +207,14 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "java.lang.NullPointerException",
+      "  org.scijava.ui.DefaultUIService.show(DefaultUIService.java:260)",
+      "  cmd5$$user$$anonfun$1.apply$mcV$sp(Main.scala:32)"
+     ]
     }
    ],
    "source": [
@@ -230,43 +223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Compilation Failed",
-      "\u001b[31mMain.scala:90: inferred type arguments [Nothing,net.imagej.ImgPlus[?0]] do not conform to class dsImgPlus's type parameter bounds [T <: net.imglib2.type.numeric.RealType[T],U <: net.imglib2.img.Img[T]]",
-      "new dsImgPlus(imp).toDataset().preview()",
-      "^\u001b[0m"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Found 10 JHotDraw adapters.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "\u001b[36mres4\u001b[0m: io.scif.Metadata = io.scif.formats.APNGFormat$Metadata@43e93ee8"
+       "\u001b[36mres6\u001b[0m: \u001b[32mio\u001b[0m.\u001b[32mscif\u001b[0m.\u001b[32mMetadata\u001b[0m = io.scif.formats.APNGFormat$Metadata@39a113e7"
       ]
      },
      "metadata": {},
@@ -276,49 +241,21 @@
    "source": [
     "ij.scifio().datasetIO().save(dataset,\"test.png\") // save the data elsewhere"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><tr><td>Hey</td></tr><tr><td>Bye</td></tr></table>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display.html(\"<table><tr><td>Hey</td></tr><tr><td>Bye</td></tr></table>\")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Scala 2.10",
-   "language": "scala210",
-   "name": "scala210"
+   "display_name": "Scala 2.11",
+   "language": "scala211",
+   "name": "scala211"
   },
   "language_info": {
    "codemirror_mode": "text/x-scala",
-   "file_extension": "scala",
+   "file_extension": ".scala",
    "mimetype": "text/x-scala",
-   "name": "scala210",
+   "name": "scala211",
    "pygments_lexer": "scala",
-   "version": "2.10.5"
+   "version": "2.11.8"
   }
  },
  "nbformat": 4,
